--- a/booking.html
+++ b/booking.html
@@ -135,7 +135,7 @@
               <label for="note">Write Your Order Here</label>
               <textarea name="Note" id="note" rows="4"></textarea>
             </div>
-            <button type="submit" class="btn primary-btn">Book Table</button>
+            <button type="submit" class="btn primary-btn"><a href="submitted.html">Book Table</a></button>
           </form>
         </div>
       </div>
