--- a/booking.html
+++ b/booking.html
@@ -147,7 +147,7 @@
         <div class="footer__wrapper">
           <div class="footer__col1">
             <div class="footer__logo">
-              <img src="./images/logo.svg" alt="shaif's cuisine" />
+<!--               <img src="./images/logo.svg" alt="shaif's cuisine" /> -->
             </div>
             <p class="footer__desc">
               Fresh and delicious food to delight the
