--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                   <img src="./images/3star.png" alt="Food img" />
                 </div>
                 <p class="testimonial__item__text">
-                  "from start to finish, lovely experience. Hostess very
+                  "from start to finish, lovely experience. Hosts very
                   pleasant, wait staff Suryakant and Tushar was wonderful and attentive, food
                   plentiful and delicious, desserts out of this world"
                 </p>
